--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@pinia/nuxt": "^0.4.11",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "nanoid": "^4.0.2",
+    "pinia": "^2.1.4"
   }
 }
